# syllogym

./: .gitignore  README.md  blog_post.md
envs/elenchus_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/elenchus_env/server/: Dockerfile  app.py
envs/elenchus_env/server/core/: base_driver.py  environment.py  session.py
envs/elenchus_env/server/drivers/: fol_nli.py  folio.py  knights_knaves.py  legalbench.py  proofwriter.py  syllogism_generator.py
envs/syllogym_env/: README.md  __init__.py  client.py  judge_env.py  models.py  openenv.yaml  pyproject.toml
envs/syllogym_env/server/: Dockerfile  __init__.py  app.py  syllogym_environment.py
envs/syllogym_env/server/core/: __init__.py  adapters.py  base_driver.py  base_generator.py  case_file.py  environment.py  investigation_env.py  judge_environment.py  reward.py
envs/syllogym_env/server/data/: sara_episodes.json
envs/syllogym_env/server/drivers/: __init__.py  fol_nli.py  folio.py  knights_knaves.py  legalbench.py  proofwriter.py  rulebreakers.py
envs/syllogym_env/server/generators/: __init__.py  adverse_possession_generator.py  consideration_generator.py  diversity_generator.py  hearsay_generator.py  mens_rea_generator.py  miranda_generator.py  qualifying_child_generator.py  sara_generator.py  statute_of_frauds_generator.py  terry_stop_generator.py  tsr_generator.py  ucc_generator.py
evaluation/: eval_baseline.ipynb
green_agent/: Dockerfile  README.md  agent.py  green_agent.ipynb  pyproject.toml
green_agent/src/: agent.py  executor.py  messenger.py  server.py
notebooks/: eval_baseline.json  eval_local.ipynb  train_elenchus_grpo.ipynb  train_syllogym_grpo.ipynb
notebooks/assets/: eval_checkpoint.json
scripts/: enrich_episodes.py  generate_sara_episodes.py  test_local.py
scripts/enricher/: __init__.py  anchors.py  enricher.py  prompt.py  verifier.py
tests/: test_generators.py
training/: train_and_compare.ipynb  train_folio.ipynb  train_grpo.ipynb  train_legalbench.ipynb  train_proofwriter.ipynb  train_rulebreakers.ipynb
