[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "syllogym-env"
version = "0.1.0"
description = "SylloGym: Legal Syllogistic Reasoning Environment for RLVR"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "datasets>=2.19.0",
    "huggingface_hub>=0.23.0",
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["syllogym_env*"]
